--- a/.github/workflows/pipeline_template.yaml
+++ b/.github/workflows/pipeline_template.yaml
@@ -29,14 +29,14 @@ jobs:
 
       - name: Terraform Plan
         id: plan
-        run: terraform plan -out=${{ github.workspace }}/tfplanoutput/tfplan
+        run: terraform plan -out=${{ github.workspace }}/tfplan.out
         working-directory: ./
 
       - name: Upload Artifacts for apply phase 
         uses: actions/upload-artifact@v3
         with:
          name: artifact
-         path: ${{ github.workspace }}/tfplanoutput/
+         path: ${{ github.workspace }}/
          if-no-files-found: error
 
   terraform-apply:
@@ -58,13 +58,13 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: artifact
-          path: ${{ github.workspace }}/tfplanoutput/
+          path: ${{ github.workspace }}/
 
 
       - name: Terraform Apply
         id: apply
         if: contains(github.event.head_commit.message, 'terraform apply')
-        run: terraform apply -auto-approve tfplan
+        run: terraform apply -auto-approve tfplan.out
         working-directory: ./
 
       - name: Terraform Destroy
