--- a/.github/workflows/pipeline_template.yaml
+++ b/.github/workflows/pipeline_template.yaml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Terraform Plan
         id: plan
-        run: terraform plan -out=${{ github.workspace }}/tfplan.out
+        run: terraform plan
         working-directory: ./
 
   terraform-apply:
